Fix boxes getting cut off (by basePage), more cleanup

--- a/Story Primer/Story Primer/Story Primer.css
+++ b/Story Primer/Story Primer/Story Primer.css
@@ -1,5 +1,11 @@
 /*Story Primer.CSS
- */
+
+Override "width: 100%;" in basePage.css*/
+.bloom-editable, TD, TEXTAREA
+{
+	width: auto !important;
+}
+/* */
 .activity
 {
 	padding: 0 6pt !important;
@@ -35,7 +41,7 @@
 {
 	font-size: 140%;
 	margin-left: 0pt;
-	padding: 0 0 6px;
+	/*[disabled]padding:0 0 6px;*/
 }
 .A5Portrait .bloom-editable
 {
@@ -82,11 +88,11 @@
 }
 .boxIcon
 {
-	width: 20%;
+	width: 15%;
 }
 .boxLessonNumber
 {
-	width: 20%;
+	/*[disabled]width:auto;*/
 }
 .boxLessonTitle
 {
@@ -245,10 +251,9 @@
 .lessonTitle
 {
 	margin-left: 2pt;
-	margin-top: 0pc;
+	margin-top: 0px;
 	text-align: center;
 	font-weight: bold;
-	font-size: 10pt;
 }
 .mainTitle
 {
@@ -435,8 +440,15 @@
 }
 .primerTableTitleLine
 {
-	table-layout: fixed;
 	width: 100%;
+}
+.primerTableKeyWordWork
+{
+	width: 50%;
+}
+.A5Portrait .primerTableKeyWordWork
+{
+	height: 164px;
 }
 .primerTableWordFind TD .bloom-editable
 {
@@ -513,7 +525,7 @@
 }
 .sampleSentence
 {
-	font-size: 200% !important;
+	font-size: 150% !important;
 	clear: both;
 	margin-left: 2pt;
 	text-indent: 0;
